# DeepBot

./: .env  chatbot.py  corpus_BACKUP.py  database.db  keep_alive.py  main.py  pyproject.toml
backup/: chatbot.py  corpus_BACKUP.py
data/: chatbot.py  model.py
pickles/: classes.pkl
server/: keep_alive.py
src/: intents.json  model.h5  utils.py
