[tool.poetry]
name = "gradient"
version = "0.1.1"
description = "A Deep Learning-based Discord bot."
authors = ["Rodrigo Pereira <pereirarodrigocs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
chatterbot-voice = "^0.1.5"
discord = "^1.0.1"
utils = "^1.0.1"
flask = "^1.1.2"
keras = "^2.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
